--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -5,14 +5,20 @@
 
 \begin{document}
 	\author{Bart Lambregs, Vincent Gellens}
-	\xmtitle{Inleiding kinematica}{}
+	\xmtitle{Inleiding}{}
     \xmsource\xmuitleg
 
-\textbf{Kinematica} (afkomstig van het Griekse woord $\kappa \iota \nu \eta \mu \alpha$ ) is het belangrijke onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft} zonder zich af te vragen wat de oorzaak ervan is. 
-Dat gaat bijvoorbeeld over vallende appels, rollende knikkers of rijdende auto's, maar ook over de beweging van de maan rond de aarde, de aarde rond de zon, moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
+\textbf{Kinematica}
+\footnote{Het woord \verb|kinematica| is net zoals \verb|cinema| en \vzerb|kinesist| afgeleid van het Griekse $\kappa \iota \nu \eta \mu \alpha$ dat \verb|beweging| betekent.} 
+is het onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft}, 
+% zonder zich af te vragen wat de bewegingen veroorzaakt.
+zoals vallende appels, rollende knikkers of rijdende auto's, maar ook de beweging van de maan rond de aarde of de aarde rond de zon. 
 
 
-Dit hoofdstuk bestudeert de \textbf{basisbegrippen} en \textbf{basisgrootheden}  van de kinematica om in een volgende fase enkele concrete basisbewegingen (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort) te beschrijven.
+% of moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
+
+
+In dit hoofdstuk worden de \textbf{basisbegrippen} en \textbf{basisgrootheden} van de kinematica behandeld waarmee in een volgende fase enkele concrete basisbewegingen (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort) worden beschreven.
 
 Kwantitatief behandelt kinematica steeds de vectoriële grootheden \textbf{positie}, \textbf{snelheid} en \textbf{versnelling}, hun verbanden onderling en hun afhankelijk met de scalaire grootheid \textbf{tijd}.
 
@@ -23,11 +29,12 @@ Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbew
 	\item Hoe ver valt de appel van de boom?
 	\item Hoe lang duurt het voor de appel de grond raakt? 
 	\item Hoe snel valt de appel? Is die snelheid altijd dezelfde, of valt een appel altijd maar sneller? 
-	\item Als de snelheid van de appel verandert, hoe groot is ze dan bij het begin van de val? En na 1 seconde? En op het moment dat de appel de grond raakt? 
+	\item Als de snelheid van de appel verandert, hoe groot is ze dan bij het begin van de val? En na 1 seconde? Wat op het moment dat de appel de grond raakt? 
 \end{itemize}
 
-We bekommeren ons voorlopig nog niet over de vraag \textit{waarom} een appel naar beneden valt, en bijvoorbeeld niet naar boven.
-Dat komt later, in het onderdeel \textit{dynamica}, waar we de \textit{krachten} zullen bestuderen die de bewegingen beïnvloeden. Wel, we zullen zien dat krachten eigenlijk alleen maar de \textit{veranderingen van bewegingen} veroorzaken.
+De kinematica vraagt zich niet af \textit{waarom} een appel naar beneden valt, en bijvoorbeeld niet naar boven.
+In het latere onderdeel \textit{dynamica} worden \textit{krachten} bestudeerd die de bewegingen beïnvloeden. 
+We zullen zien dat krachten eigenlijk alleen maar de \textit{veranderingen van bewegingen} veroorzaken.
 
 \end{example}
 
@@ -35,18 +42,38 @@ Dat komt later, in het onderdeel \textit{dynamica}, waar we de \textit{krachten}
 Als je een krijtje gooit naar het bord, kan je je daarover allerlei vragen stellen:
 \begin{itemize}
 \item Vliegt dat krijtje in een rechte lijn naar het bord? Of eerder in een cirkelbaan? Of misschien een ellips?
-\item Hoe snel vliegt dat krijtje? Vertraagt het tijden zijn vlucht omdat het kracht verliest, of versnelt het eerder omdat het ook wat naar beneden valt? 
+\item Hoe snel vliegt het krijtje? Vertraagt het tijden zijn vlucht omdat het kracht verliest, of versnelt het eerder omdat het ook wat naar beneden valt? 
 \item Als de leerkracht het laatste stukje van de baan van het krijtje nauwkeurig heeft geregistreerd, kan hij dan weten welke leerling gegooid heeft?
-\item Als je uitglijdt en valt net bij het gooien, gaat het krijtje dan ook sneller naar beneden vallen?
+% \item Als je uitglijdt en valt net bij het gooien, gaat het krijtje dan ook sneller naar beneden vallen?
 \item Vliegen lange en korte krijtjes even snel? Vliegen witte en rode krijtjes even snel? Vliegen krijtjes met een scherpe punt sneller?
 \item Mag je eigenlijk wel met krijtjes gooien?
-\item Is dit voorbeeld niet erg verouderd in deze tijden van electronische borden? Kan je met stiften gooien? Mag dat? Zal ChatGPT ooit met krijtjes kunnen gooien?
+% \item Is dit voorbeeld niet erg verouderd in deze tijden van electronische borden? Kan je met stiften gooien? Mag dat? Zal ChatGPT ooit met krijtjes kunnen gooien?
 \item Als je snel genoeg gooit, en opzettelijk het bord mist, is het dan theoretisch mogelijk om het krijtje in een baan om de aarde te krijgen? Hoe snel zou je moeten gooien? 
 \end{itemize}  
 
-Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica. Enkele vragen zijn eigenlijk onzinnig, en uitzonderlijk kan een vraag worden behandeld in de strafstudie. Als een vraag grappig zou zijn, is dat toevallig en irrelevant.
+Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica. 
+% Enkele vragen zijn eigenlijk onzinnig, en uitzonderlijk kan een vraag worden behandeld in de strafstudie. Als een vraag grappig zou zijn, is dat toevallig en irrelevant.
 
 \end{example}
+
+
+% EERSTE VERSIE 
+% \begin{example}
+% Als je een krijtje gooit naar het bord, kan je je daarover allerlei vragen stellen:
+% \begin{itemize}
+% \item Vliegt dat krijtje in een rechte lijn naar het bord? Of eerder in een cirkelbaan? Of misschien een ellips?
+% \item Hoe snel vliegt dat krijtje? Vertraagt het tijden zijn vlucht omdat het kracht verliest, of versnelt het eerder omdat het ook wat naar beneden valt? 
+% \item Als de leerkracht het laatste stukje van de baan van het krijtje nauwkeurig heeft geregistreerd, kan hij dan weten welke leerling gegooid heeft?
+% \item Als je uitglijdt en valt net bij het gooien, gaat het krijtje dan ook sneller naar beneden vallen?
+% \item Vliegen lange en korte krijtjes even snel? Vliegen witte en rode krijtjes even snel? Vliegen krijtjes met een scherpe punt sneller?
+% \item Mag je eigenlijk wel met krijtjes gooien?
+% \item Is dit voorbeeld niet erg verouderd in deze tijden van electronische borden? Kan je met stiften gooien? Mag dat? Zal ChatGPT ooit met krijtjes kunnen gooien?
+% \item Als je snel genoeg gooit, en opzettelijk het bord mist, is het dan theoretisch mogelijk om het krijtje in een baan om de aarde te krijgen? Hoe snel zou je moeten gooien? 
+% \end{itemize}  
+
+% Sommige van deze vragen worden behandeld in de kinematica, andere in de dynamica. Enkele vragen zijn eigenlijk onzinnig, en uitzonderlijk kan een vraag worden behandeld in de strafstudie. Als een vraag grappig zou zijn, is dat toevallig en irrelevant.
+
+% \end{example}
 % Als je de valbeweging van een appel wilt beschrijven, heb je eerst een \textbf{referentiestelsel} nodig van waaruit je dit zal doen. In dit referentiestelsel een plaatsvector, snelheidsvector, versnellingsvector, ... toekennen en de grootte van deze vectoren beschrijven met vergelijkingen. 
 
 % deze zin is enkel goed als ze het al kennen. 
